--- a/.github/workflows/daily-green.yml
+++ b/.github/workflows/daily-green.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Update heartbeat file
         run: |
           mkdir -p .github
-          echo "$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> .github/reminder.txt
+          echo "$(date -u +'%Y-%m-%dT%H:%M:%SZ') - 🌱 잔디 심기" >> .github/reminder.txt
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .github/reminder.txt
-          git commit -m "chore: daily heartbeat [skip ci]" || echo "no changes"
+          git commit -m "feat: - $(date +'%Y년 %m월 %d일')" || echo "변경사항 없음"
           git push
 
       # 방법 B) 레포를 더럽히기 싫으면 빈 커밋으로도 가능
@@ -32,5 +32,5 @@ jobs:
       #   run: |
       #     git config user.name "github-actions[bot]"
       #     git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      #     git commit --allow-empty -m "chore: daily heartbeat (empty) [skip ci]"
+      #     git commit --allow-empty -m "feat: 빈 커밋으로 잔디 심기 - $(date +'%Y년 %m월 %d일')"
       #     git push
