--- a/.github/workflows/daily-green.yml
+++ b/.github/workflows/daily-green.yml
@@ -20,11 +20,20 @@ jobs:
       - name: Update heartbeat file
         run: |
           mkdir -p .github
-          echo "$(date -u +'%Y-%m-%dT%H:%M:%SZ') - 🌱 잔디 심기" >> .github/reminder.txt
+          
+          # 기존 파일이 있으면 라인 수를 세어서 일수 계산
+          if [ -f .github/reminder.txt ]; then
+            DAY_COUNT=$(wc -l < .github/reminder.txt)
+            DAY_COUNT=$((DAY_COUNT + 1))
+          else
+            DAY_COUNT=1
+          fi
+          
+          echo "$(date -u +'%Y-%m-%dT%H:%M:%SZ') - 🌱 잔디 심기 ${DAY_COUNT}일차" >> .github/reminder.txt
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .github/reminder.txt
-          git commit -m "feat: - $(date +'%Y년 %m월 %d일')" || echo "변경사항 없음"
+          git commit -m "feat: 잔디 심기 ${DAY_COUNT}일차 - $(date +'%Y년 %m월 %d일')" || echo "변경사항 없음"
           git push
 
       # 방법 B) 레포를 더럽히기 싫으면 빈 커밋으로도 가능
@@ -32,5 +41,10 @@ jobs:
       #   run: |
       #     git config user.name "github-actions[bot]"
       #     git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      #     git commit --allow-empty -m "feat: 빈 커밋으로 잔디 심기 - $(date +'%Y년 %m월 %d일')"
+      #     
+      #     # 커밋 히스토리에서 일수 계산
+      #     COMMIT_COUNT=$(git rev-list --count HEAD)
+      #     DAY_COUNT=$((COMMIT_COUNT + 1))
+      #     
+      #     git commit --allow-empty -m "feat: 잔디 심기 ${DAY_COUNT}일차 (빈 커밋) - $(date +'%Y년 %m월 %d일')"
       #     git push
